// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | CollapsibleCard Collapsed initially 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 fCiISE"
>
  <button
    aria-expanded={false}
    className="CollapsibleCard__StyledButton-xk1kem-1 bnCTBS"
    onClick={[Function]}
    type="button"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 gLivVz"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <h2
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 kZoBvC"
        >
          Collapsed initially
        </h2>
      </div>
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 boQuyh CollapsibleCard__AnimatedChevronUp-xk1kem-2 jKuLUJ"
          collapsed={true}
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-180 12 12)"
          />
        </svg>
      </div>
    </div>
  </button>
  <div
    className="CollapsibleCard__StyledCollapsible-xk1kem-0 eleYqQ"
    height="0px"
    hidden={true}
    onTransitionEnd={[Function]}
  >
    <p
      className="CollapsibleCardstories__styledText-zzyqmg-0 chdbZp Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules | CollapsibleCard Collapsible with custom component as title 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 fCiISE"
>
  <button
    aria-expanded={true}
    className="CollapsibleCard__StyledButton-xk1kem-1 bnDGCP"
    onClick={[Function]}
    type="button"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 gLivVz"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <h2
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 kZoBvC"
        >
          <div>
            Custom title
          </div>
        </h2>
      </div>
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 boQuyh CollapsibleCard__AnimatedChevronUp-xk1kem-2 eGZoly"
          collapsed={false}
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-180 12 12)"
          />
        </svg>
      </div>
    </div>
  </button>
  <div
    className="CollapsibleCard__StyledCollapsible-xk1kem-0 hCAsfz"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="CollapsibleCardstories__styledText-zzyqmg-0 chdbZp Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules | CollapsibleCard Collapsible with onClick listener 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 fCiISE"
>
  <button
    aria-expanded={true}
    className="CollapsibleCard__StyledButton-xk1kem-1 bnDGCP"
    onClick={[Function]}
    type="button"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 gLivVz"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <h2
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 kZoBvC"
        >
          I've been clicked 0 times
        </h2>
      </div>
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 boQuyh CollapsibleCard__AnimatedChevronUp-xk1kem-2 eGZoly"
          collapsed={false}
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-180 12 12)"
          />
        </svg>
      </div>
    </div>
  </button>
  <div
    className="CollapsibleCard__StyledCollapsible-xk1kem-0 hCAsfz"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="CollapsibleCardstories__styledText-zzyqmg-0 chdbZp Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
    >
      On mobile the onClick event should fire for onTouchStart and not onClick.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules | CollapsibleCard Default 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 fCiISE"
>
  <button
    aria-expanded={true}
    className="CollapsibleCard__StyledButton-xk1kem-1 bnDGCP"
    onClick={[Function]}
    type="button"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 gLivVz"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <h2
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 kZoBvC"
        >
          Collapsible
        </h2>
      </div>
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <svg
          aria-hidden="true"
          className="IconBase__StyledIconBase-sc-10cbji3-0 boQuyh CollapsibleCard__AnimatedChevronUp-xk1kem-2 eGZoly"
          collapsed={false}
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <polygon
            points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            transform="rotate(-180 12 12)"
          />
        </svg>
      </div>
    </div>
  </button>
  <div
    className="CollapsibleCard__StyledCollapsible-xk1kem-0 hCAsfz"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="CollapsibleCardstories__styledText-zzyqmg-0 chdbZp Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</div>
`;
